--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.mobdeve.s17.group39.itismob_mco">
 
     <application
         android:allowBackup="true"
@@ -10,12 +11,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ITISMOBMCO">
+        android:theme="@style/Theme.ITISMob_MCO">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ITISMOBMCO">
+            android:theme="@style/Theme.ITISMob_MCO">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
