--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ITISMob_MCO">
         <activity
-            android:name=".ui.homepage.HomeActivity"
+            android:name=".login.LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ITISMob_MCO">
@@ -33,6 +33,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.homepage.HomeActivity"
+            android:exported="false" />
 
         <activity
             android:name=".ui.viewbook.ViewBookActivity"
